--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "@toast-ui/editor": "^3.1.1",
     "cordova-plugin-zeroconf": "1.4.2",
     "html2canvas": "^1.3.2",
+    "imagedata-filters": "^1.0.1",
     "qrcanvas": "^3.1.2",
     "rxjs": "^7.4.0",
     "solid-js": "^1.2.2",
